- updated print stylesheet to new layout - use italics for form descriptions - increase whitespace between checkboxes - increase whitespace between node title and meta - removed padding on textareas as it was causing too many issues - show handle image on grippie - make color for block and page borders more neutral

--- a/color.css
+++ b/color.css
@@ -62,10 +62,10 @@ input.form-submit:focus {
   border-bottom-color: #bee043;
 }
 
-/* Brown (borders) */
+/* Brown (border) */
 #main,
 .block {
-  border-color: #e8e8b3;
+  border-color: #e4e4bf;
 }
 
 /* White (page) */
