--- a/print.css
+++ b/print.css
@@ -9,7 +9,7 @@ body {
   width: 100% !important;
   line-height: 1.3;
 }
-#main > .inner {
+#main {
   margin: 0!important;
   min-width: 0!important;
   max-width: none!important;
@@ -18,19 +18,13 @@ body {
 }
 #main {
   padding: 0;
-  border: none;
 }
-#content {
+#content-wrapper {
   width: 100%!important;
-}
-#header {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 .node h2 a {
   text-decoration: none!important;
 }
-
 /* Elements */
 h1 {
   font-size: 20pt;
@@ -49,23 +43,21 @@ h6 {
 a {
   text-decoration: underline !important;
 }
-
 /* Hidden */
 #toolbar,
-#header,
-#main-menu
+#header-wrapper,
+#main-menu-wrapper,
 .breadcrumb,
-#navigation,
 ul.links,
 .messages,
 .tabs,
-#secondary-links-wrapper,
-#footer,
-#footer-closure-wrapper,
-#sidebar-first,
-#sidebar-second,
+#footer-wrapper,
+#closure-wrapper,
+#sidebar-first-wrapper,
+#sidebar-second-wrapper,
 ul.pager,
-a.feed-icon {
+a.feed-icon,
+form#comment-form {
   display: none!important;
 }
 
